--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,42 @@
-
-a {
-    text-decoration: none;
-    color: #888;
-}
-
 .header_wrap{
-    margin: auto; 
-    width: 1448px;
-    height: 215px;
-    display: flex;
-    align-items: center;
-    position: relative;
+  margin:auto;
+  width: 1080px;
+  height: 215px;
+  display:flex;
+  align-items:center;
+  position: relative;
 }
-.logo_area{
-    height: 100%;
+.header_wrap h1{
+  background-image: url('../images/naver_logo.png');
+  background-repeat: no-repeat;
+  float: left;
+  width: 222px;
+  height: 52px;
 }
-.logo_area h1{
+.header_wrap h1 a{
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.header_wrap h1 span{
+  position: absolute;
+  clip: rect(0 0 0 0 );
+  overflow: hidden;
+}
+.links{
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.links a{
+  font-size: 10px;
+  margin-left: 5px;
+}
+fieldset{
+  border:none;
+}
+.visually_hidden{
     position: absolute;
-    top: 50%;
-    left:300px;
-    margin-top:-32px;
-}
-.logo_area h1 a{
-    display: block;    
-}
-.logo_area h1 a::before{
-    display: block; 
-    width: 222px;
-    height: 52px;
-    background-position: 0 -320px;
-    background-image: url(../images/naver_sp_main_6f9b98.png);
-    background-repeat: no-repeat;
-}
-fieldset {
-    border: none;
-}
-  .visually-hidden { /* legend 안보이게 설정. 이렇게하면 접근성을 준수하면서 디자인을 해치지 않습니다. */
-    position: absolute !important;
     height: 1px;
     width: 1px;
     overflow: hidden;
@@ -44,83 +44,68 @@ fieldset {
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
 }
-  .links { /* 링크들을 상단 우측에 위치시킵니다. */
-    position: absolute;
-    top: 0;
-    right: 0;
+select{
+  display: none;
 }
-  .link_text {
-    font-size: 10px;
-    margin-left: 5px;
-  }
-  .img_logo {
-    margin-bottom: 12px;
-    width: 220px;
-    height: 65px;
-  }
-  .search_box {
-    width: 520px;
-    height: 50px;
-    border: 2px solid #03cf5d;
-    display: flex;
-    align-items: center;
-  }
-  .search_box input {
-    flex: 9; /* search-box내부에서 9만큼의 크기를 차지(비율) */
-    height: 46px;
-    padding-left: 12px;
-    padding-right: 12px;
-    border: none;
-    outline: none;
-    font-size: 18px;
-  }
-  .search_box button {
-    flex: 1;
-    height: 46px;
-    margin: 0;
-    padding: 0;
-    border: none;
-    outline: none;
-    background: #03cf5d;
-    color: #ffffff;
-  }
-  /* nav */
-  header > nav {
-    width: 100%;
+.green_window{
+  position: relative;
+  width: 582px;
+  height: 52px;
+  border:2px solid #19ce60;
+  align-items: center;
+}
+.input_text{
+  flex:9;
+  width: 582px;
+  height: 52px;
+  padding: 13px 15px;
+  border:none;
+  outline: none;
+  font-size: 18px;
+}
+.green_window button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 56px;
+  background-color: #19ce60;
+  border: none;
+  outline: none;
+  color: #ffffff;
+}
+.gnb{
+  width: 100%;
     height: 45px;
     position: absolute;
     bottom: 0;
-  }
-  .nav_items {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 15px;
-    font-weight: bold;
-    border-top: 1px solid #f1f3f6;
-  }
-  .nav_items ul > li {
-    display: inline-block;
-    margin-left: 8px;
-  }
-  .nav_items ul > li:nth-child(-n + 7) > a { /* <ul>하위 7번째 <li>까지 각각 내부의 <a> 태그 접근 */
-    color: #03cf5d;
-  }
-  .nav_items ul > li > a {
-    text-decoration: none;
-    cursor: pointer;
-  }
-  main {
-    background: #f2f4f7;
-    min-height: 700px;
-  }
-  footer {
-    background: darkgray;
-    height: 310px;
-  }
-  /* 재사용 클래스 */
-  .color_naver {
-    color: #03cf5d;
-  }
+}
+.group_nav{
+  position:absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 15px;
+  font-weight: bold;
+  border-top: 1px solid #f1f3f6;
+}
+.group_nav ul li{
+  display:inline-block;
+  margin-left: 8px;
+}
+.group_nav ul > li:nth-child(-n + 7) > a { 
+  color: #03cf5d;
+}
+.group_nav ul li a{
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.keyword{
+  float: right;
+}
+.color_naver {
+  color: #03cf5d;
+}
