--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
+
 .header_wrap{
   margin:auto;
-  width: 1080px;
+  width: 1190px;
   height: 215px;
   display:flex;
   align-items:center;
@@ -75,10 +76,11 @@ select{
   color: #ffffff;
 }
 .gnb{
-  width: 100%;
+    width: 100%;
     height: 45px;
     position: absolute;
     bottom: 0;
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 12%);
 }
 .group_nav{
   position:absolute;
@@ -94,6 +96,16 @@ select{
 .group_nav ul li{
   display:inline-block;
   margin-left: 8px;
+  
+}
+.group_nav img{
+    float: left;
+    display: inline-block;
+    width: 21px;
+    height: 21px;
+    background-repeat: no-repeat;
+    vertical-align: top;
+    margin: 3px 9px 0 0;
 }
 .group_nav ul > li:nth-child(-n + 7) > a { 
   color: #03cf5d;
@@ -108,4 +120,124 @@ select{
 }
 .color_naver {
   color: #03cf5d;
+}
+main {
+  background: #f2f4f7;
+  min-height: 700px;
+}
+.main-container {
+  width: 1190px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(24, 40px); 
+  gap: 10px;
+}
+.main-box:nth-of-type(-n+2){
+  margin-top:20px;
+}
+.ad{
+  grid-column: 1 / 3;
+  grid-row: 1 / 3;
+  margin-top: 20px;
+  height: 135px;
+}
+.ad a{
+  display: block;
+}
+.ad a img{
+  width: 750px;
+  height: 135px;
+}
+.sc_login {
+  grid-column: 3 / 4;
+  grid-row: 1 / 3;
+  padding: 14px 14px 12px 17px;
+  background-color: #f7f9fa;
+  border: 1px solid #dae1e6;
+  height: 135px;
+  box-sizing: border-box;
+}
+h2{
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+}
+.login_msg{
+  padding-left: 3px;
+  color: gray;
+  font-size: 12px;
+}
+
+.sc_login .link_login{
+    display: block;
+    padding: 15px 0;
+    margin-top: 11px;
+    background-color: #19ce60;
+    border: 1px solid #15c654;
+    border-radius: 2px;
+    font-size: 13px;
+    color: #fff;
+    font-weight: 700;
+    text-align: center;
+    text-decoration: none;
+}
+.icon_naver .naver{
+  position: absolute;
+  clip:rect(0 0 0 0);
+  overflow: hidden;
+}
+.lock_box{
+  float:left;
+  font-size: 12px;
+  
+}
+.lock_box::before{
+  display: inline-block;
+    width: 10px;
+    height: 14px;
+    background-repeat: no-repeat;
+    vertical-align: top;
+    background-image: url(../images/naver_lock.png);
+    content: '';
+    margin: 2px 1px 1px;
+}
+.lock_box a{
+  text-decoration : none;
+}
+.box-three-1 {
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
+}
+
+.box-three-2 {
+  grid-column: 1 / 3;
+  grid-row: 4 / 7;
+}
+.box-four-1 {
+  grid-column: 3 / 4;
+  grid-row: 3 / 5;
+}
+.box-four-2 {
+  grid-column: 3 / 4;
+  grid-row: 5 / 7;
+}
+.box-five {
+  grid-column: 1 / 3;
+  grid-row: 7 / 23;
+}
+.box-six {
+  grid-column: 3 / 4;
+  grid-row: 7 / 23;
+}
+.box-seven {
+  grid-column: 1 / 3;
+  grid-row: 23 / 25;
+}
+.box-eight {
+  grid-column: 3 / 4;
+  grid-row: 23 / 25;
 }
