--- a/css/style.css
+++ b/css/style.css
@@ -76,11 +76,10 @@ select{
   color: #ffffff;
 }
 .gnb{
-    width: 100%;
-    height: 45px;
+    width:1190px ;
+    height: 52px;
     position: absolute;
     bottom: 0;
-    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 12%);
 }
 .group_nav{
   position:absolute;
@@ -92,6 +91,9 @@ select{
   font-size: 15px;
   font-weight: bold;
   border-top: 1px solid #f1f3f6;
+  border-bottom: 1px solid #f1f3f6;
+  
+  
 }
 .group_nav ul li{
   display:inline-block;
@@ -99,7 +101,6 @@ select{
   
 }
 .group_nav img{
-    float: left;
     display: inline-block;
     width: 21px;
     height: 21px;
@@ -133,12 +134,10 @@ main {
   grid-template-rows: repeat(24, 40px); 
   gap: 10px;
 }
-.main-box:nth-of-type(-n+2){
-  margin-top:20px;
-}
+
 .ad{
-  grid-column: 1 / 3;
-  grid-row: 1 / 3;
+  grid-column: 1 / 4;
+  grid-row: 1 / 4;
   margin-top: 20px;
   height: 135px;
 }
@@ -146,17 +145,18 @@ main {
   display: block;
 }
 .ad a img{
-  width: 750px;
+  width: 790px;
   height: 135px;
 }
 .sc_login {
   grid-column: 3 / 4;
-  grid-row: 1 / 3;
+  grid-row: 1 / 4;
   padding: 14px 14px 12px 17px;
   background-color: #f7f9fa;
   border: 1px solid #dae1e6;
   height: 135px;
   box-sizing: border-box;
+  margin-top: 20px;
 }
 h2{
   position: absolute;
@@ -174,7 +174,7 @@ h2{
 
 .sc_login .link_login{
     display: block;
-    padding: 15px 0;
+    padding: 16px 16px 12px 17px;
     margin-top: 11px;
     background-color: #19ce60;
     border: 1px solid #15c654;
@@ -193,24 +193,44 @@ h2{
 .lock_box{
   float:left;
   font-size: 12px;
-  
+  color:#404040;
+  margin: 5px 1px 1px;
 }
 .lock_box::before{
   display: inline-block;
-    width: 10px;
-    height: 14px;
-    background-repeat: no-repeat;
-    vertical-align: top;
-    background-image: url(../images/naver_lock.png);
-    content: '';
-    margin: 2px 1px 1px;
+  width: 10px;
+  height: 14px;
+  background-repeat: no-repeat;
+  vertical-align: top;
+  background-image: url(../images/naver_lock.png);
+  content: '';
 }
 .lock_box a{
   text-decoration : none;
 }
-.box-three-1 {
+.link_join{
+  float:right;
+  color:#505050;
+  font-size: 12px;
+  line-height:16px;
+  text-decoration: none;
+  margin: 5px 1px 1px;
+}
+.link_join::before{
+  display: inline-block;
+    width: 11px;
+    height: 11px;
+    background-position: -840px -649px;
+    background-repeat: no-repeat;
+    vertical-align: top;
+    content: '';
+    background-image: url(../images/naver_sp_main_6f9b98.png);
+    padding:1px;
+}
+.grour_issue {
   grid-column: 1 / 3;
-  grid-row: 3 / 4;
+  grid-row: 4 / 5;
+  background-color: violet;
 }
 
 .box-three-2 {
